Scribbles from our analysis

--- a/docs/examples/ewatercycle_api_notebook.ipynb
+++ b/docs/examples/ewatercycle_api_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea3df16a",
+   "id": "135115cc",
    "metadata": {},
    "source": [
     "# eWaterCycle platform tutorial\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6bf337",
+   "id": "001d69ad",
    "metadata": {},
    "source": [
     "## Configuration\n",
@@ -62,45 +62,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7bd950e7",
+   "execution_count": 6,
+   "id": "61e99042",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "Cannot find: `~/.ewatercycle/config.yml",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-103c29975675>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#This completely unnecessary line loads the configuration file from the default location.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mCFG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_from_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'~/.ewatercycle/config.yml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mCFG\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Projects/eWaterCycle/ewatercycle/ewatercycle/config/_config_object.py\u001b[0m in \u001b[0;36mload_from_file\u001b[0;34m(self, filename)\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpanduser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mFileNotFoundError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Cannot find: `{filename}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: Cannot find: `~/.ewatercycle/config.yml"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# this loads the configuration from the default location(s). This should normally be fine\n",
-    "from ewatercycle import CFG\n",
-    "\n",
-    "#This completely unnecessary line loads the configuration file from the default location.\n",
-    "CFG.load_from_file('~/.ewatercycle/config.yml')\n",
-    "\n",
-    "CFG\n",
-    "\n",
-    "# Config({\n",
-    "#    'container_engine': 'docker',\n",
-    "#    'esmvaltool_config': PosixPath('/home/user/.ewatercycle/esmvaltool-config-user.yml'),\n",
-    "#    'ewatercycle_config': PosixPath('/home/user/.ewatercycle/config.yml'),\n",
-    "#    'grdc_data_dir': '/Path/to/grdc/data',\n",
-    "#    'output_dir': PosixPath('/home/user/ewatercycle-output'),\n",
-    "#    'singularity_containers_dir': '/home/user/ewatercycle/singularity'\n",
-    "#    'parameterset_dir': '/home/user/ewatercycle/parameter_sets',"
+    "# This loads the configuration from the default location(s). \n",
+    "from ewatercycle import CFG"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "017abb51",
+   "id": "72593ff1",
+   "metadata": {},
+   "source": [
+    "Default locations where ewatercycle looks for the configuration are:\n",
+    "- `/etc/ewatercycle.yaml`\n",
+    "- `~/.config/ewatercycle/ewatercycle.yaml`\n",
+    "\n",
+    "These are typically configured by the system administrator (see the [System setup guide](/system_setup).)\n",
+    "\n",
+    "You can also use a configuration file to store a custom setup. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c81395ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Config({'container_engine': 'docker',\n",
+       "        'esmvaltool_config': None,\n",
+       "        'ewatercycle_config': PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/ewatercycle.yaml'),\n",
+       "        'grdc_location': None,\n",
+       "        'output_dir': PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples'),\n",
+       "        'parameter_sets': {'lisflood_fraser': {'config': 'lisflood_fraser/settings_lat_lon-Run.xml',\n",
+       "                                               'directory': 'lisflood_fraser',\n",
+       "                                               'doi': 'N/A',\n",
+       "                                               'supported_model_versions': {'20.10'},\n",
+       "                                               'target_model': 'lisflood'},\n",
+       "                           'pcrglobwb_example_case': {'config': 'pcrglobwb_example_case/setup_natural_test.ini',\n",
+       "                                                      'directory': 'pcrglobwb_example_case',\n",
+       "                                                      'doi': 'N/A',\n",
+       "                                                      'supported_model_versions': {'setters'},\n",
+       "                                                      'target_model': 'pcrglobwb'},\n",
+       "                           'wflow_rhine_sbm_nc': {'config': 'wflow_rhine_sbm_nc/wflow_sbm_NC.ini',\n",
+       "                                                  'directory': 'wflow_rhine_sbm_nc',\n",
+       "                                                  'doi': 'N/A',\n",
+       "                                                  'supported_model_versions': {'2020.1.1'},\n",
+       "                                                  'target_model': 'wflow'}},\n",
+       "        'parameterset_dir': PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets'),\n",
+       "        'singularity_dir': None})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CFG.load_from_file('./ewatercycle.yaml')\n",
+    "CFG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21c6834e",
    "metadata": {},
    "source": [
     "## Forcing generation\n",
@@ -117,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "91733c0d",
+   "id": "5e887394",
    "metadata": {
     "scrolled": true
    },
@@ -158,9 +188,7 @@
     "    model_specific_options = {\n",
     "        'wflow_dem_file' : '/some/path/to/dem.dem',\n",
     "        'hype_catchment_delineation' : '/some/other/shapefile'\n",
-    "    },\n",
-    "    #location on the file system where the output will but placed. Optional, otherwise generated.\n",
-    "    directory='/path/to/forcing/output/',\n",
+    "    }\n",
     ")\n",
     "\n",
     "# Calling this function should show a progress bar, or at least auto-hide or auto-scroll the output."
@@ -169,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d88cc738",
+   "id": "6a5f081f",
    "metadata": {
     "scrolled": true
    },
@@ -212,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bd6099b",
+   "id": "57c43415",
    "metadata": {},
    "source": [
     "### Example Yaml file with forcing metadata\n",
@@ -233,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da5e3d20",
+   "id": "716c024b",
    "metadata": {},
    "source": [
     "## Loading existing forcing\n",
@@ -244,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc98ce8a",
+   "id": "0b7d0337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e652e0d1",
+   "id": "029fc562",
    "metadata": {},
    "source": [
     "## Model versions\n",
@@ -282,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a315bbb8",
+   "id": "98e1e41e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c33d8591",
+   "id": "e62b84f4",
    "metadata": {},
    "source": [
     "## Parameter Sets\n",
@@ -306,37 +334,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "441b74ba",
+   "execution_count": 8,
+   "id": "35153e8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.parameter_sets\n",
-    "\n",
-    "ewatercycle.parameter_sets.available_parameter_sets(target_model='wflow')\n",
-    "# [\"wflow-30-min-global\", \"wflow-05-min-rhinemeuse\"]\n",
-    "\n",
-    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow-30-min-global')\n",
-    "\n",
-    "parameter_set.target_model\n",
-    "# 'wflow'\n",
-    "\n",
-    "parameter_set.doi\n",
-    "# 'https://doi.org/10.1000/182'\n",
-    "\n",
-    "parameter_set.name\n",
-    "# 'wflow-30-min-global'\n",
-    "\n",
-    "parameter_set.supported_model_versions\n",
-    "# [\"2019.1\", \"2020.1\"]\n",
-    "\n",
-    "parameter_set.directory\n",
-    "# '/mnt/data/ewatercycle/parameter_sets/wflow/30-min-global'"
+    "import ewatercycle.parameter_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "509f8529",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('wflow_rhine_sbm_nc',)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ewatercycle.parameter_sets.available_parameter_sets(target_model='wflow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8cf5c944",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter set\n",
+      "-------------\n",
+      "name='wflow_rhine_sbm_nc'\n",
+      "directory=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc')\n",
+      "config=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc/wflow_sbm_NC.ini')\n",
+      "doi='N/A'\n",
+      "target_model='wflow'\n",
+      "supported_model_versions={'2020.1.1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow_rhine_sbm_nc')\n",
+    "print(parameter_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c413e5e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wflow'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_set.target_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fd7a7614",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'N/A'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_set.doi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dcf76b00",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wflow_rhine_sbm_nc'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_set.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bef7aba9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'2020.1.1'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameter_set.supported_model_versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f13092af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parameter_set.directory)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40a85c0f",
+   "id": "b6a2e409",
    "metadata": {},
    "source": [
     "## Creating, setting up, and initializing a model instance\n",
@@ -349,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d86c4b",
+   "id": "53f3353b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,9 +552,9 @@
     "#An opportunity to inspect the generated configuration file, and make any changes manually that could not be\n",
     "#done through the setup method. Splitting these also makes it easier to run initialize in parallel in case a\n",
     "#lot of models are created simultaneously (e.g. when calibrating a model)\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read(cfg_file)\n",
-    "#change config file where needed...\n",
+    "\n",
+    "# To modify, open it in an editor and save\n",
+    "print(cfg_file)\n",
     "\n",
     "#This function will initialize the model using the files created above. For some models this can take some time.\n",
     "model_instance.initialize(cfg_file)"
@@ -405,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a33bcf0",
+   "id": "967fd35b",
    "metadata": {},
    "source": [
     "## Running a model and getting output\n",
@@ -414,9 +571,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dff204cb",
+   "metadata": {},
+   "source": [
+    "# TODO Merge these cells below\n",
+    "In the loop, only use get_value_at_coords to keep track of a single outlet point.\n",
+    "At the end, show get_value_as_xarray to show you can also get the whole field"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de333e2d",
+   "id": "0dc4da66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6f5eb3",
+   "id": "0a18150e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a690719",
+   "id": "d10584b1",
    "metadata": {},
    "source": [
     "## Analyzing the results\n",
@@ -483,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01139773",
+   "id": "13a4b9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e9db71",
+   "id": "f35c3507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23148254",
+   "id": "cc2cbe5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfe14a2d",
+   "id": "6b0be972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
