--- a/docs/examples/lisflood.ipynb
+++ b/docs/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52e2f7fe",
+   "id": "c02a5bfe",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "df68dec9",
+   "id": "beaadb1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa855a37",
+   "id": "08016b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10125d57",
+   "id": "8ed2138d",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ff5018d",
+   "id": "3aa0c7a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +66,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08860d19",
-   "metadata": {},
+   "id": "d9547bc5",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "# This example uses a custom parameterset from our system:\n",
     "parameterset = ParameterSet(\n",
     "    name='Lisflood01degree_masked',\n",
     "    directory='/projects/0/wtrcycle/comparison/lisflood_input/Lisflood01degree_masked',\n",
     "    config='/projects/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml',\n",
-    "    supported_model_versions={'20.10'},\n",
     "    target_model='lisflood'\n",
     ")\n",
     "mask_map = '/projects/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD/model_mask.nc'"
@@ -82,29 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ceb61a04",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['20.10']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ewatercycle.models.Lisflood.available_versions"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "c220553e",
+   "id": "54344de9",
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +119,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "2fe222cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20.10']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ewatercycle.models.Lisflood.available_versions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "2717526a",
+   "id": "7915f0ed",
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +158,13 @@
    "source": [
     "# create lisflood instance\n",
     "model = ewatercycle.models.Lisflood(version='20.10', parameter_set=parameterset, forcing=forcing)\n",
-    "model"
+    "print(model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3ade51be",
+   "id": "5d66b316",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ec7d05f7",
+   "id": "1d1e6514",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e2707fc1",
+   "id": "473ff55b",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ebe5fdac",
+   "id": "4943e558",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0ae3f0da",
+   "id": "57f5be74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4fb130e6",
+   "id": "a6c80c9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ed424c51",
+   "id": "b66c66d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "97fdceaa",
+   "id": "3495b85a",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a08e63d8",
+   "id": "49e6b592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d159b951",
+   "id": "b9274b40",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7d33c370",
+   "id": "c7522b29",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "92b884c5",
+   "id": "b778ad4b",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a28d9a36",
+   "id": "efd86418",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9855918a",
+   "id": "e1c8a3b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675b6b06",
+   "id": "163ce244",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -856,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
