--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "181daf63",
+   "id": "6b052a82",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,20 +10,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1490c138",
+   "id": "67538dbe",
    "metadata": {
     "tags": []
    },
    "source": [
-    "This notebook assumes you have a working model configuration available on your system. We will use the example data from https://github.com/UU-Hydro/PCR-GLOBWB_input_example and we will user `ewatercycle.parametersetdb` to copy it to our local directory.\n",
+    "**This notebook assumes that the ewatercycle has already been set up for your system.**\n",
+    "See system setup documentation for instructions.\n",
     "\n",
-    "We will combine them into one `PCRGloBWBParameterSet` object, which we can then pass to the model when we first create it."
+    "This notebook runs the PCRGlobWB example parameterset comes from https://github.com/UU-Hydro/PCR-GLOBWB_input_example. \n",
+    "This means that you have access to the PCRGlobWB singularity image, the example parameterset including forcing data has been downloaded and added to a configuration file.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "becb0108",
+   "id": "e69f70e7",
    "metadata": {},
    "outputs": [
     {
@@ -49,61 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "de4e592f-937a-458b-892b-81084b6507fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ewatercycle.CFG['container_engine'] = 'singularity'  # or 'singularity'\n",
-    "ewatercycle.CFG['singularity_dir'] = './'\n",
-    "ewatercycle.CFG['output_dir'] = './'\n",
-    "ewatercycle.CFG['ewatercycle_config'] = './ewatercycle.yaml'\n",
-    "ewatercycle.CFG['parameterset_dir'] = './parameter-sets'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "f31f988f-08c6-4ea7-a910-fa7d4485d25d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading example parameter set wflow_rhine_sbm_nc to /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/wflow_rhine_sbm_nc...\n",
-      "Download complete.\n",
-      "Adding parameterset wflow_rhine_sbm_nc to ewatercycle.CFG... \n",
-      "Downloading example parameter set pcrglobwb_example_case to /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case...\n",
-      "Download complete.\n",
-      "Adding parameterset pcrglobwb_example_case to ewatercycle.CFG... \n",
-      "Downloading example parameter set lisflood_fraser to /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/parameter-sets/lisflood_fraser...\n",
-      "Download complete.\n",
-      "Adding parameterset lisflood_fraser to ewatercycle.CFG... \n",
-      "3 example parameter sets were downloaded\n",
-      "Config written to /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/ewatercycle.yaml\n",
-      "Saved parameter sets to configuration file /home/verhoes/git/eWaterCycle/ewatercycle/docs/examples/ewatercycle.yaml\n"
-     ]
-    }
-   ],
-   "source": [
-    "ewatercycle.parameter_sets.download_example_parameter_sets()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "96661b81-778b-46ef-a390-60e84adf9b0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ewatercycle.CFG.reload()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "86e7a979-095b-4941-ab68-42205fcf4514",
+   "id": "7258bd8b",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f57a6f04",
+   "id": "fc160902",
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +98,8 @@
     }
    ],
    "source": [
+    "# This example case would work without forcing, because the forcing is already part of the parameterset.\n",
+    "# However, for the purpose of example, we show how the forcing would be loaded using the ewatercycle.forcing module. \n",
     "forcing = ewatercycle.forcing.load_foreign(\n",
     "    target_model = \"pcrglobwb\",\n",
     "    start_time = \"2001-01-01T00:00:00Z\",\n",
@@ -165,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ad624243",
+   "id": "489522cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e5d681b5",
+   "id": "ab145de9",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "328e0ef2",
+   "id": "a03c60fd",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f0a2404",
+   "id": "1adf43be",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d468b126",
+   "id": "55806a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "241c5817",
+   "id": "5a4365cd",
    "metadata": {},
    "outputs": [
     {
@@ -375,13 +326,13 @@
     }
    ],
    "source": [
-    "pcrglob.output_var_names"
+    "pcrglob.output_var_names[:3]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "709a9b83",
+   "id": "6ab66c92",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "329b7d77",
+   "id": "1787e08b",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cbb4a75d",
+   "id": "41f407f3",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d9b57cf2",
+   "id": "60d4ad31",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a835ef4f",
+   "id": "abf73700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97fc0864",
+   "id": "39bb04f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -982,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
